src/objects/EA_BadgeDetails__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>BadgeColor__c</fullName>
        <label>BadgeColor</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BadgeSerial__c</fullName>
        <label>BadgeSerial</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BadgeValue__c</fullName>
        <label>BadgeValue</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>EA_BadgeDetails</label>
</CustomObject>